# calendar-scraper-template

./: .gitignore  CHANGELOG.md  EXAMPLES.md  QUICKSTART.md  README.md  TEMPLATE_GUIDE.md  config.py  html_templates.py  init_scraper.py  pyproject.toml  requirements.txt  scraper.py  utils.py
.github/workflows/: scrape.yml
docs/: .gitkeep
extractors/: __init__.py  api_extractor.py  html_extractor.py  json_extractor.py  text_extractor.py
tests/: test_scraper.py
